# cargo-reapi

./: AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE-MIT  README.md
.github/workflows/: ci.yml
acceptance/: ACCEPTANCE_CRITERIA.md  COVERAGE.md  REPRODUCING.md  assemble-receipts.sh  contract.toml  install-macos-eslogger-sudoers.sh  legacy-evidence-classification.json  run-adversarial.sh  run-bevy-integrity.sh  run-bro-five.sh  run-moria-gate.sh  run-moria-local.sh  run-platform-qualification.sh  run-resource-cold-work.sh  run-resources.sh
acceptance/bevy-fixture/: Cargo.toml
acceptance/bevy-fixture/src/: main.rs
acceptance/bevy-fixture/tests/: runtime.rs
acceptance/lib/: provenance.sh
acceptance/linux/: Dockerfile  README.md  run-qualification.sh  setup-xfs-reflink-volume.sh
acceptance/rustc-observer/: rustc
benchmarks/: README.md
benchmarks/results/: 2026-07-19-local.md  2026-07-20-linux-ext4.md  2026-07-20-linux-xfs.md  2026-07-21-linux-xfs-schema-v3.md  2026-07-21-macos-apfs.md  2026-07-22-bro-moria-production.json  2026-07-22-bro-moria-production.md
docs/: architecture.md  backend-evaluation.md  introducing-cargo-reapi.md  launch-preflight-2026-07-23.md  moria-acceptance-2026-07-18.md  moria-acceptance-2026-07-19.md
docs/case-studies/: moria-agent-fleet.md
src/: acceptance.rs  action.rs  cache.rs  capture.rs  evidence.rs  gate.rs  hermetic.rs  invocation.rs  main.rs  maintenance.rs  proof.rs  query.rs  reclient.rs  relocation.rs  resource.rs
tests/: auditor_stall.rs  bevy.rs  capture.rs  resource_harness.rs
