[package]
name = "cargo-reapi"
version = "0.1.0"
edition = "2024"
default-run = "cargo-reapi"
license = "MIT OR Apache-2.0"
description = "Cargo-authoritative shared build caching with experimental REAPI execution"
readme = "README.md"
repository = "https://github.com/TamedTornado/cargo-reapi"
keywords = ["cargo", "build-cache", "remote-execution", "reapi", "rustc"]
categories = [
    "caching",
    "command-line-utilities",
    "development-tools::build-utils",
    "development-tools::cargo-plugins",
]
rust-version = "1.88"
exclude = [
    "/.dockerignore",
    "/.github/**",
    "/.gitignore",
    "/AGENTS.md",
]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
fs2 = "0.4"
memchr = "2.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
toml = "0.9"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.20"

[lints.clippy]
all = "warn"
pedantic = "warn"
